--- a/Views/SetPassword.xaml
+++ b/Views/SetPassword.xaml
@@ -35,12 +35,13 @@
                Margin="0,60,0,50"
                BackgroundColor="Black"  
                TextColor="White"
-               x:Name="Entry"
+               x:Name="PasswordEntry"
+               Text="{Binding Name}"
         />
         
          <Button Text="Nastavit"
                  IsEnabled="False"
-                 Clicked="Button_Clicked"/>
+                 Command="{Binding SetPasswordCommand}"/>
     </StackLayout>
 
 </ContentPage>
