--- a/Views/SetPassword.xaml
+++ b/Views/SetPassword.xaml
@@ -3,9 +3,11 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="IMP_reseni.Views.SetPassword"
              xmlns:ViewModels="clr-namespace:IMP_reseni.ViewModels"
+             xmlns:Converters="clr-namespace:IMP_reseni.Converters"
              Title=""  
              >
     <ContentPage.Resources>
+        <Converters:IntToBoolConverter x:Key="intToBool" />
         <Style TargetType="Button">
             <Setter Property="FontSize" Value="32" />
             <Setter Property="BorderWidth" Value="1" />
@@ -40,7 +42,9 @@
         />
         
          <Button Text="Nastavit"
-                 IsEnabled="False"
+                 IsEnabled="{Binding Source={x:Reference PasswordEntry},
+                                     Path=Text.Length,
+                                     Converter={StaticResource intToBool}}"
                  Command="{Binding SetPasswordCommand}"/>
     </StackLayout>
 
