--- a/Views/Cloud.xaml
+++ b/Views/Cloud.xaml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="IMP_reseni.Views.Accounting"
-             Title="Accounting">
+             x:Class="IMP_reseni.Views.Cloud"
+             Title="Cloud">
     <ContentPage.Resources>
         <Style TargetType="Button">
             <Setter Property="FontSize" Value="32" />
@@ -11,17 +11,10 @@
             <Setter Property="BackgroundColor" Value="#FFA500"/>
         </Style>
     </ContentPage.Resources>
-    <Border            
-        Margin="25,75,25,75"
-        Padding="50"
-        StrokeShape="RoundRectangle 20"
-        BackgroundColor="#7B2CBF" StrokeThickness="0">
-        <FlexLayout 
-             Direction="Column"
-             AlignItems="Stretch"
-             JustifyContent="SpaceEvenly">
-            <Button Text="Vložení dat"/>
-            <Button Text="Učetní soubor"/>
-        </FlexLayout>
-    </Border>
+    <VerticalStackLayout>
+        <Label 
+            Text="Welcome to .NET MAUI!"
+            VerticalOptions="Center" 
+            HorizontalOptions="Center" />
+    </VerticalStackLayout>
 </ContentPage>
