--- a/Views/MainPage.xaml
+++ b/Views/MainPage.xaml
@@ -15,6 +15,7 @@
     <NavigationPage.TitleView >
       
         <FlexLayout 
+
             Margin="0,0,15,0"
             Padding="0"
              Direction="Row"
@@ -22,7 +23,7 @@
                 JustifyContent="SpaceBetween"
             >
             <Label
-            Text="SS"
+            Text="LOGO"
             FontSize="Title"
             TextColor="White"
             />
@@ -44,41 +45,16 @@
 
 
 
-    <StackLayout Margin="0,10,0,0">
-
-        
-
-
-        <!--<FlexLayout 
-            Margin="0,0,0,0"
-            Padding="0"
-            Direction="Row"
-            AlignItems="Center"
-            JustifyContent="SpaceBetween"
-            >
-            <Label
-            Text="Ikona"
-            FontSize="Title"
-            TextColor="White"
-            />
-            <Label
-            Text="Hlavní Stránka"
-            FontSize="Title"
-            TextColor="White"
-            />
-            <Label
-            Text="Ikona"
-            FontSize="Title"
-            TextColor="White"
-            />
-        </FlexLayout>-->
+    <Grid Margin="0,10,0,0"
+          RowDefinitions="10,Auto,30,*"
+          ColumnDefinitions="*">
 
         <Border Margin="10,0,10,0"
                Background="White"
-                StrokeShape="RoundRectangle 40">
+                StrokeShape="RoundRectangle 40"
+                Grid.Row="1">
             <SearchBar Placeholder="Search items" 
-                       FontSize="Title"
-               />
+                       FontSize="Title"/>
         </Border>
 
        
@@ -93,23 +69,51 @@
         StrokeShape="RoundRectangle 40,40,0,0"
         Background="#D9D9D9"
         Margin="0,50,0,0"
-        VerticalOptions="FillAndExpand">
-            <VerticalStackLayout>
-
-                <Label
-            HorizontalOptions="Center"
+              Grid.Row="3">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="AUTO" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                    <Label
+                    Grid.Row="0"
+                    HorizontalOptions="Center"
                     TextColor="{StaticResource Key=Primary}"
                     FontSize="Title"
                     FontAttributes="Bold"
                     Text="Kategorie"
                     />
-                <ScrollView>
+                    <CollectionView  ItemsSource="{Binding Items}" 
+                                 SelectionMode="Single"
+                                  ItemsLayout="VerticalGrid, 3"
+                                     Grid.Row="1">
+                        <CollectionView.ItemTemplate>
+                            <DataTemplate>
+                                <Grid Padding="10">
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="Auto" />
+                                        <RowDefinition Height="Auto" />
+                                    </Grid.RowDefinitions>
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*" />
+                                    </Grid.ColumnDefinitions>
+                                    <Image Grid.Row="0"
+                                   Source="{Binding ImageUrl}" 
+                                   Aspect="AspectFill" />
 
-                    <Grid ColumnDefinitions="*,*"/>
+                                    <Label Grid.Row="1"
+                                   Text="{Binding Name}" 
+                                   HorizontalTextAlignment="Center"
+                                   FontSize="Medium"/>
 
-                </ScrollView>
-            
-        </VerticalStackLayout>
+                                </Grid>
+                            </DataTemplate>
+                        </CollectionView.ItemTemplate>
+                    </CollectionView>
+            </Grid>
         </Border>
-    </StackLayout>
+    </Grid>
 </ContentPage>
