--- a/Views/Create.xaml
+++ b/Views/Create.xaml
@@ -2,6 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" 
              xmlns:controls="clr-namespace:IMP_reseni.Controls"
+             xmlns:Views="clr-namespace:IMP_reseni.Views"
              x:Class="IMP_reseni.Views.Create"
              Title="Vytvořit">
     <ContentPage.Resources>
@@ -21,10 +22,21 @@
              Direction="Column"
              AlignItems="Stretch"
              JustifyContent="SpaceEvenly">
-            <Button Text="Kategorie"/>
-            <Button Text="PodKatogorie"/>
-            <Button Text="Dodavatel"/>
-            <Button Text="Položka"/>
+            <Button Text="Kategorie"
+                    Command="{Binding NavigateCommand}"
+                    CommandParameter="{x:Type Views:NewCategory}"/>
+            
+            <Button Text="PodKatogorie"
+                     Command="{Binding NavigateCommand}"
+                    CommandParameter="{x:Type Views:NewSubCategory}"/>
+            
+            <Button Text="Dodavatel"
+                     Command="{Binding NavigateCommand}"
+                    CommandParameter="{x:Type Views:NewSupplier}"/>
+            
+            <Button Text="Položka"
+                     Command="{Binding NavigateCommand}"
+                    CommandParameter="{x:Type Views:NewItem}"/>
         </FlexLayout>
     </Border>
 </ContentPage>
