--- a/Views/SetPassword.xaml
+++ b/Views/SetPassword.xaml
@@ -17,8 +17,7 @@
         </Style>
     </ContentPage.Resources>
 
-    <StackLayout Padding="10" VerticalOptions="Start" Margin="0,50,0,0"
-                 >
+    <StackLayout Padding="10" VerticalOptions="Start" Margin="0,50,0,0">
         
         <Label 
             Text="Nastavení hesla pro správu"
