--- a/Views/NewItem.xaml
+++ b/Views/NewItem.xaml
@@ -1,12 +1,71 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+              xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
+             xmlns:Converters="clr-namespace:IMP_reseni.Converters"
              x:Class="IMP_reseni.Views.NewItem"
              Title="NewItem">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+    <ContentPage.Resources>
+        <Converters:IntToBoolConverter x:Key="intToBool" />
+        <toolkit:VariableMultiValueConverter 
+                x:Key="VariableMultiValueConverter"
+                ConditionType="Exact"
+                Count="3" />
+        <Style TargetType="Button">
+            <Setter Property="FontSize" Value="32" />
+            <Setter Property="BorderWidth" Value="1" />
+            <Setter Property="BorderColor" Value="Black" />
+            <Setter Property="Margin" Value="0,0,0,0"/>
+            <Setter Property="CornerRadius"  Value="0"/>
+        </Style>
+    </ContentPage.Resources>
+
+    <StackLayout Margin="75">
+        <Picker Title="Zvol Kategorii"
+                x:Name="CategoryPicker"
+                ItemsSource="{Binding ListOfCategory}"
+                SelectedItem="{Binding SelectedCategory}"
+                HorizontalTextAlignment="Center"
+                FontSize="Large"
+                TitleColor="Black"
+                Margin="0,0,0,80"
+                />
+
+        <Picker Title="Zvol Pokategorii"
+                x:Name="SubCategoryPicker"
+                ItemsSource="{Binding ListOfSubCategory}"
+                SelectedItem="{Binding SelectedSubCategory}"
+                HorizontalTextAlignment="Center"
+                FontSize="Large"
+                TitleColor="Black"
+                Margin="0,0,0,80"
+                />
+
+        <Label Text="Název Podkategorie" 
+               HorizontalOptions="Center"
+               FontSize="Large"
+               LineBreakMode="WordWrap"/>
+        
+        <Entry Placeholder="Vlož název"
+               x:Name="Entry"
+               HorizontalOptions="Center"
+               FontSize="Large"
+               Margin="0,20,0,50"
+               Text="{Binding Text}"/>
+
+
+        <Button Text="Vytvořit Kategorii"
+                HorizontalOptions="Center"
+                Command="{Binding CreateCommand}"
+                CommandParameter="{Binding Source={x:Reference Entry},
+                                            Path=Text}">
+            <Button.IsEnabled>
+                <MultiBinding Converter="{StaticResource VariableMultiValueConverter}">
+                    <Binding Converter="{StaticResource intToBool}" Source="{x:Reference Entry}" Path="Text.Length" />
+                    <Binding Converter="{StaticResource intToBool}" Source="{x:Reference SubCategoryPicker}" Path="SelectedItem.Length" />
+                    <Binding Converter="{StaticResource intToBool}" Source="{x:Reference CategoryPicker}" Path="SelectedItem.Length" />
+                </MultiBinding>
+            </Button.IsEnabled>
+        </Button>
+    </StackLayout>
 </ContentPage>
