--- a/Views/NewSubCategory.xaml
+++ b/Views/NewSubCategory.xaml
@@ -36,7 +36,7 @@
                HorizontalOptions="Center"
                FontSize="Large"
                LineBreakMode="WordWrap"/>
-        <Entry Placeholder="Vlož název"
+        <Entry Placeholder="Zadejte název"
                x:Name="Entry"
                HorizontalOptions="Center"
                FontSize="Large"
